k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pictorian
  namespace: pictorian
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: pictorian
  selector:
    app: pictorian
  sessionAffinity: None
  type: ClusterIP
